# ward

./: README.md  SECURITY.md  pyproject.toml  ward
demo_data/: mock_events.json  mock_inventory.json
docs/: EXPLOIT_CLASSES.md  PROTECTION_RULES.md
src/ward/: __init__.py  __main__.py  cli.py  config.py  demo.py  discovery.py  guard.py  hooks.py  launch.py  logger.py  platform_utils.py  protect.py  status.py  uninstall.py
src/ward/exploits/: __init__.py  approval_bypass.py  browser_access.py  classes.py  config_poisoning.py  detector.py  events.py  mcp_injection.py  normalize.py  policy.py  sensitive_writes.py  tool_chain.py  trust_violation.py
src/ward/wrappers/: __init__.py  wrapper_template.py
tests/: __init__.py  test_acceptance.sh  test_cli.py  test_discovery.py  test_evasion.py  test_exploits.py  test_exploits_integration.sh  test_hook_rules.sh  test_integration.py  test_policy.py
